@@ -296,6 +296,11 @@
       in a \samp{\docType} section.
 
       \code{ecdf()} objects now have a \code{quantile()} method.
+
+      \code{format()} methods for date-time objects now attempt to make
+      use of a \code{"tzone"} attribute with \code{"\%Z"} and
+      \code{"\%z"} formats, but it is not always possible.  (Wish of
+      \PR{14358}.)
     }
   }
   \subsection{DEPRECATED & DEFUNCT}{
